--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="content">
           <h1>Hei, jeg er John</h1>
           <h3>Velkommen til min hjemmeside</h3>
-          <p>Jeg begynte min utdanning ved å studere Python på egen hånd, drevet av en sterk interesse for programmering og teknologi. Etter min innledende erfaring med Python, gikk jeg et kurs i Data Engineering og Analytics og jeg jobbet deretter i omtrent ett år som dataingeniør. I løpet av denne tiden fikk jeg verdifull erfaring med å håndtere databaser, jobbe i Azure, dataanalyse og utforming av rapporter. Nylig har jeg vendt fokuset mot webutvikling, hvor jeg har brukt de siste månedene på å lære meg HTML, CSS, Javascript og Django.
+          <p>Jeg begynte min utdanning ved å studere Python på egen hånd, drevet av en sterk interesse for programmering og teknologi. Etter min innledende erfaring med Python, gikk jeg et kurs i Data Engineering og Analytics og jeg jobbet deretter i 9 mnd som dataingeniør. I løpet av denne tiden fikk jeg verdifull erfaring med å håndtere databaser, jobbe i Azure, dataanalyse og utforming av rapporter. Nylig har jeg vendt fokuset mot webutvikling, hvor jeg har brukt de siste månedene på å lære meg HTML, CSS, Javascript og Django.
 
           <p>For øyeblikket er jeg på jakt etter en stilling i et fremoverlent firma i Oslo som verdsetter innovasjon og tar imot nye talenter. Jeg er ivrig etter å tilføre min unike kombinasjon av erfaring og ferdigheter til teamets fremgang. Dersom ditt firma ser etter en tilpasningsdyktig og motivert webutvikler, ta kontakt. Sammen kan vi utforske hvordan mine evner passer med deres visjon.</p>
           <br>
